<resources>
    <string name="app_name">SIGMA</string>
    <string name="login">LOGIN</string>
    <string name="attendance">ASISTENCIA</string>
    <string name="title_attendance">Control de asistencia cuadrillas</string>
    <string name="catering">ABASTECIMIENTO</string>
    <string name="title_catering">Control de abastecimiento a vehiculos</string>
    <string name="task">TAREAS</string>
    <string name="title_task">Ver tareas asignadas   CM - PM - PLM</string>

    <string-array name="typeTask">
        <item>CM</item>
        <item>PM</item>
        <item>PLM</item>
    </string-array>

    <string name="idTask">ID TAREA</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings Menu-->

    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>

    <!-- Strings Shorcuts-->
    <string name="accesos_rapidos">Accesos Rapidos</string>
    <string name="title_activity_menu_desplegable2">INGELCOM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido(a)</string>
    <string name="nav_header_subtitle">Yarince Padilla</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>

    <!-- Abastecimiento -->
    <string name="user">Usuario</string>
    <string name="title_activity_abastecimiento_otros">Abastecimiento Otros</string>
    <string name="monto_abastecido">Monto abastecido</string>
    <string name="precio_litros">Precio por litro</string>
    <string name="factura">Factura</string>
    <string name="kilometraje">Kilometraje</string>
    <string name="tipo_maquinaria">Tipo Maquinaria</string>
    <string name="maquinaria">Maquinaria</string>

    <string name="fotoFactura">Foto Factura</string>
    <string name="fotoMaquinaria">Foto Maquinaria</string>

    <string-array name="maquinaria_tipo">
        <item>Vehiculo tercero</item>
        <item>Tambo provisional</item>
        <item>Cortacesped</item>
        <item>MGP</item>
    </string-array>

    <!-- HelperText Abastecimiento -->
    <string name="adjunte_fotografia">Adjunte Fotografia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
