<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AbastecimientoOtrosActivity"
    tools:showIn="@layout/activity_abastecimiento_otros">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_maquinaria" />

                <Spinner
                    android:id="@+id/idTipoMaquinaria_sp_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Spinner>


            </LinearLayout>


            <EditText
                android:id="@+id/monto_abastecido_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/monto_abastecido"
                android:inputType="numberDecimal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:helperText="@string/adjunte_fotografia">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/precio_litros"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>


                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/boton_redondo"
                    android:clickable="true"
                    android:contentDescription="@string/user"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_description_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fotoFactura"
                        android:textStyle="bold" />

                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/boton_redondo"
                        android:clickable="true"
                        android:contentDescription="@string/user"
                        android:focusable="true"
                        app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_local_gas_station_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fotoMaquinaria"
                        android:textStyle="bold" />

                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/boton_redondo"
                        android:clickable="true"
                        android:contentDescription="@string/user"
                        android:focusable="true"
                        app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Observaciones"
                app:helperText="Breve Descripcion">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>